LaTeX - Fixed some tiny errors

--- a/LaTeX/citations.bib
+++ b/LaTeX/citations.bib
@@ -203,7 +203,7 @@
 @misc{CivilizationCompany,
 	Author = {{Firaxis Games}},
 	Note = {Video Games},
-	Title = {Civilization IV},
+	Title = {{Civilization IV}},
 	Year = {2005}}
 
 @misc{Minecraft,
