--- a/LaTeX/discussion.tex
+++ b/LaTeX/discussion.tex
@@ -7,7 +7,7 @@
 	\subsection{City 2 and 4} \label{ssec:city2-3}
 		Generated with similar parameters but different seeds these two cities should in theory be very similar. Two cities with similar parameters were included to see if there is any noticeable difference between similarly generated cities. These cities were hypothesized to be the most viable to use in games since they were created using the full procedural generation pipeline with parameters that were thought to be good. Figure \ref{fig:pie-chart-use-in-game} shows that these two cities are perceived as more viable than cities one and three. This was expected, however, city five seems to be even more viable. Hence, it is possible that the generation pipeline can be improved upon. As illustrated in Figure \ref{fig:pie-chart-road-network} city four seems to have much better road network than city two. Considering that they were generated with similar parameters but the results diverge to a noticeable degree it may be the case that some aspects of the cities differ more than expected. The difference between these two cities shows that cities generated with similar parameters may be very variable in some aspects even when only small changes are made to the parameters such as changing the seed.
 	\subsection{City 3}
-		Randomly generated, this city seems to be the least viable in games along with city one according to the user study, as shown in Figure \ref{fig:pie-chart-use-in-game}. This was expected since procedurally generated content should be more viable than randomly generated content. Where city three is the most prevalent is in the repetitive cities and ugliest cities charts, illustrated in Figure \ref{fig:pie-chart-repetitive} and \ref{fig:pie-chart-ugly}. This city is perceived as the second most random city after city one as presented in Figure \ref{fig:pie-chart-random}. The results that this city looks the most repetitive to the participants is unexpected. The least coherency and most variance in buildings should be in city three as there is no districts to control the buildings nor road variables. To analyze why city three is perceived as repetitive even though it should have the most variety is out of scope for this thesis.
+		Randomly generated, this city seems to be the least viable in games along with city one according to the user study, as shown in Figure \ref{fig:pie-chart-use-in-game}. This was expected since procedurally generated content should be more viable than randomly generated content. Where city three is the most prevalent is in the repetitive cities and ugliest cities charts, illustrated in Figure \ref{fig:pie-chart-repetitive} and \ref{fig:pie-chart-ugly}. This city is perceived as the second most random city after city one as presented in Figure \ref{fig:pie-chart-random}. The results that this city looks the most repetitive to the participants is unexpected. The least coherency and most variance in buildings should be in city three as there is no districts to control the buildings nor road variables. To analyze why city three is perceived as repetitive even though it should have the most variety is outside the scope of this thesis.
 	\subsection{City 5}
 		Presented in Figure \ref{fig:pie-chart-use-in-game}, city five is the most viable city for games according to the user study. This is the city with randomly generated districts but otherwise use the same pipeline as cities one, two and four. Randomly generated districts affect where the different buildings may be placed along with the block size. This may result in layouts such as a house surrounded by skyscrapers. This city was seen as the most natural city by most participants, this can be seen in Figure \ref{fig:pie-chart-natural}. The participants found this city to have the second best road network after city four as shown in Figure \ref{fig:pie-chart-road-network}. This may suggest that the participants appreciate some randomness in the city but with the parameters the districts provide the house and road generation. This further supports the idea that the pipeline used in the implementation can be improved upon as suggested in \ref{ssec:city2-3}.
 	\subsection{Performance}
