--- a/LaTeX/method.tex
+++ b/LaTeX/method.tex
@@ -1,10 +1,10 @@
-Most related work focus on one of two things: procedurally generating unique building meshes\cite{PseudoInfiniteCities} or procedurally generating large cities consisting of similar looking buildings\cite{InfiniteCities}. This work focuses instead on the procedurally generated placement of existing meshes in varied districts. The concept of districts breaks up the repetitive and self-similar nature of city by introducing distinct changes in appearance between them.
+Most related work focus on one of two things: procedurally generating unique building meshes\cite{PseudoInfiniteCities} or procedurally generating large cities consisting of similar looking buildings\cite{InfiniteCities}. This work focuses instead on the procedurally generated placement of existing meshes in varied districts. The concept of districts breaks up the repetitive and self-similar nature of the city by introducing distinct changes in appearance between them.
 
 	\subsection{Districts}
 	The generation process starts with the generation of \textit{districts}. A \textit{district} is an abstract representation of an area of the city. It controls what type of buildings it contains, the minimum and maximum height of these buildings and how densely populated the area is with these buildings. The \textit{districts} have a semi-random deterministic spread across the city. There are no constraints on the distribution of the \textit{districts}. This means that one seed may produce a city where 90\% of the city is made up of one \textit{district}. There are no constraints to prevent this because this would hinder the variability of the cities generated. The \textit{districts} typically have a lot of blocks where no other districts are competing. But at the borders between districts there is a lot more variation, this is referred to as \textit{border competition}. Here a single block may contain buildings from all three \textit{districts}. This was done to avoid hard borders between the \textit{districts}. The hard borders were considered to look strange and may compromise the cities viability in games. The \textit{districts} were deemed important as they provide variation throughout the city.
 		
 	\subsection{Blocks}
-	The next stage in the process is the generation of \textit{blocks}. In this work, a \textit{block} is defined as an area enclosed by four roads. Looking at aerial photographs of large cities, like the one in Figure \ref{fig:new-york}, there is a certain pattern in the way roads are laid out. A few major roads stretches through the city and smaller, perpendicular roads connecting them together. It was decided to mimic this style. Since a \textit{block} is another abstract representation of an area, it is actually the roads that make them up. The first step of generating \textit{blocks} is to generate the main roads running through the city. After the main roads have been generated, smaller roads are generated in between, connecting the main roads together. After all roads have been generated, the city has affectively been divided into a non-uniform grid. Each cell in this grid is a \textit{block}. The size of each \textit{block} depends on what \textit{district} it belongs to.
+	The next stage in the process is the generation of \textit{blocks}. In this work, a \textit{block} is defined as an area enclosed by four roads. Looking at aerial photographs of large cities, like the one in Figure \ref{fig:new-york}, there is a certain pattern in the way roads are laid out. A few major roads stretches through the city and smaller, perpendicular roads connect them together. It was decided to mimic this style. Since a \textit{block} is another abstract representation of an area, it is actually the roads that make them up. The first step of generating \textit{blocks} is to generate the main roads running through the city. After the main roads have been generated, smaller roads are generated in between, connecting the main roads together. After all roads have been generated, the city has affectively been divided into a non-uniform grid. Each cell in this grid is a \textit{block}. The size of each \textit{block} depends on what \textit{district} it belongs to.
 	
 	\begin{figure}[h]
 		\centering
@@ -17,7 +17,7 @@ Most related work focus on one of two things: procedurally generating unique bui
 	The final stage is the generation of \textit{buildings}. Each \textit{building} is made up of three meshes: the bottom, middle and top mesh. By dividing a building into sections, it is possible to assemble different pieces and generate new \textit{buildings}. This is a powerful way to use combinatorics to generate more content. For example, creating two whole \textit{buildings} would results in only two unique buildings. Whereas creating two bottom, middle and top sections results in eight possible combinations of \textit{buildings}. Upon generation of a \textit{building}, the attributes of its \textit{district} are taken into consideration. What sections to combine, the minimum and maximum height as well as the density of \textit{buildings}, is all dictated by the \textit{district}.
 
 \section{Implementation}
-To explore the procedural generation of a city, a desktop application was created. The application provides the end user with an interface that allows for the configuration of parameters along with some statistics. 
+To explore the procedural generation of a city, a desktop application was created. The application provides the end user with an interface that allows for the configuration of parameters along with the collection of statistics.
 	
 	\subsection{Interface}
 	The core functionality of our application is in the form of a homemade static library called Elicras. It was decided early on that there should be a separation between the graphical user interface and the functionality of the application. It is therefore possible to move Elicras into another front facing interface without any significant changes to the underlying code. Elicras is divided into three areas: Rendering, Assets and PCG. Rendering, as the name implies, handles all the interfacing with the graphics card. Assets handles all the loading and using of models and textures. PCG handles all the generation of procedural content. The front facing system interacts with these subsystems through Elicras.
@@ -279,10 +279,10 @@ To explore the procedural generation of a city, a desktop application was create
 	\textbf{External validity:} The subjects in the offline user study were all from BTH's facilities. This means that most of the participants may be students with similar background. Many of the students at BTH also have personal experience with creating games of their own. This may cause the results to be different compared to if the study were conducted in another country at another school. The online study was also aimed mainly at individuals from Sweden. Participants in the online study may be acquainted with the authors of this thesis, as the questionnaire was spread on social websites.
 	
 	\subsection{Experiment execution planning}
-	The experiment was executed as follows: In the offline user study, one participant answers the questionnaire at a time. If the participants have any questions a supervisor was close by. The participants are handed the images of the cities along with the questionnaire. Anyone at the BTH's facilities may be asked to participate. The goal was to have at least 20 questionnaires answered fully. A complementary online questionnaire was also available for participants outside the facilities to answer.
+	The experiment was executed as follows: In the offline user study, one participant answered the questionnaire at a time. If the participants had any questions a supervisor was close by. The participants were handed the images of the cities along with the questionnaire. The goal was to have at least 20 questionnaires answered fully. A complementary online questionnaire was also available for participants outside the facilities to answer.
 		
 	\subsection{Experiment analysis method}
-	The answers from all the answered questionnaires are visualized in several graphs. The images all show a different city generated with a specific set of variables which was mapped to the participant's answers. For example: one city is completely randomly generated. Do the participants notice this or does it look like the generated cities? Is the PCG city with bad parameters perceived as more random than the city with good parameters? The data was analyzed to answer such questions and was then used to draw a conclusion about the generated cities viability in games.
+	The answers from all the answered questionnaires are visualized in several graphs. The images all show a different city generated with a specific set of variables which was mapped to the participants' answers. For example: one city is completely randomly generated. Do the participants notice this or does it look like the generated cities? Is the PCG city with bad parameters perceived as more random than the city with good parameters? The data was analyzed to answer such questions and was then used to draw conclusions about the generated cities' viability in games.
 	
 	\newpage
 	\section{Questionnaire form} \label{ssssec:questionnaire}
