--- a/LaTeX/conclusion.tex
+++ b/LaTeX/conclusion.tex
@@ -1,5 +1,5 @@
 \section{Conclusion}
-The conclusion of this work is that Perlin noise can be used to generate cities that are viable in games. The believability depends on what parameters are used when generating a city. However, any city generated with the generation process suggested in this work looks more believable than a city generated at random.
+The conclusion of this work is that Perlin noise can be used to generate cities that are viable in games. The believability depends on what parameters are used when generating a city.
 	
 \section{Future work}
 This section will describe a number of directions for future work.
